# KnowingPDF

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
BuildTools/: cmake_vs2015_x64_debug.bat  cmake_vs2015_x64_reldbg.bat  cmake_vs2015_x64_release.bat  readme.txt
Dependencies/pdfium-v8-win-x64/lib/: pdfium.dll.lib
Resource/: KnowingPDF.qrc  styles.qss
Source/: AMainWindows.cpp  AMainWindows.h  CustomTreeWidget.cpp  CustomTreeWidget.h  MainWindow.cpp  MainWindow.h  TwoLayerSample.cpp  TwoLayerSample.h  main.cpp  pdf_viewer.cpp  pdf_viewer.h  pdfium_utils.cpp  pdfium_utils.h
